syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "global.proto";

package service;

option java_package = "ar.edu.itba.pod.server";
option java_outer_classname = "ReportModel";
option java_multiple_files = true;

service Report {
  rpc getWaitingTrains(google.protobuf.Empty) returns (TrainList);
  rpc getAbandonedTrains(google.protobuf.Int32Value) returns (TrainAndPlatformList);
}

message TrainList {
  repeated Train train_list = 1;
}

message TrainAndPlatformList {
  repeated TrainAndPlatformValue train_and_platform_list = 1;
}